# vistar

./: Cargo.toml  LICENSE  README.md
crates/assets/: Cargo.toml
crates/assets/src/: assets.rs
crates/file_explorer/: Cargo.toml
crates/file_explorer/src/: main.rs
crates/file_icons/: Cargo.toml
crates/file_icons/src/: file_icons.rs
crates/ui/: Cargo.toml
crates/ui/src/: components.rs  ui.rs
crates/ui/src/components/: file_item.rs
crates/ui/src/components/title_bar/: title_bar.rs
crates/util/: Cargo.toml
crates/util/src/: paths.rs  util.rs
